--- a/translations/messages.pl.po
+++ b/translations/messages.pl.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
-"PO-Revision-Date: 2025-04-04 14:15+0000\n"
+"PO-Revision-Date: 2025-04-18 10:22+0000\n"
 "Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
 "Language-Team: Polish <https://translation.chamilo.org/projects/chamilo/"
 "messages/pl/>\n"
@@ -18380,7 +18380,12 @@ msgid "The app/cache/ directory cleanup has been executed successfully."
 msgstr "Oczyszczanie Archiwum /katalogu zostało wykonane pomyślnie."
 
 msgid "For some reason, the app/cache/ directory could not be cleaned up. Please clean it up by manually connecting to the server and delete all files and symbolic links under the chamilo/app/cache/ directory, except the .htaccess file. On Linux: # find app/cache/ \\( -type f -or -type l \\) -not -name .htaccess -exec echo rm -v \\{} \\;"
-msgstr "Z jakiegoś powodu, archiwum/katalog nie może być oczyszczone. Oczyść go ręcznie łącząc się z serwerem i usuwając zawartość Chamilo/Archiwum/katalogu, z wyjątkiem pliku .htaccess"
+msgstr ""
+"Z jakiegoś powodu katalog chamilo/var/cache/ nie mógł zostać wyczyszczony. "
+"Proszę wyczyścić go ręcznie: połącz się z serwerem i usuń wszystkie pliki "
+"oraz linki symboliczne w katalogu chamilo/var/cache/, z wyjątkiem pliku ."
+"htaccess. Na Linuxie: # find var/cache/ \\( -type f -or -type l \\) -not -"
+"name .htaccess -exec echo rm -v \\{} \\;"
 
 msgid "Enable start time"
 msgstr "Włącz czas rozpoczęcia"
