--- a/translations/messages.eu_ES.po
+++ b/translations/messages.eu_ES.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
-"PO-Revision-Date: 2025-04-04 14:14+0000\n"
+"PO-Revision-Date: 2025-04-18 10:22+0000\n"
 "Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
 "Language-Team: Basque <https://translation.chamilo.org/projects/chamilo/"
 "messages/eu/>\n"
@@ -18379,7 +18379,12 @@ msgid "The app/cache/ directory cleanup has been executed successfully."
 msgstr "archive/ direktorioaren garbiketa ongi burutu da"
 
 msgid "For some reason, the app/cache/ directory could not be cleaned up. Please clean it up by manually connecting to the server and delete all files and symbolic links under the chamilo/app/cache/ directory, except the .htaccess file. On Linux: # find app/cache/ \\( -type f -or -type l \\) -not -name .htaccess -exec echo rm -v \\{} \\;"
-msgstr "Kausaren bat dela medio (agian, ez dago baimenik), archive/ direktorioa ezin izan zen garbitu. Mesedez, garbitu ezazu eskuz zerbitzariarekin konektatzen eta chamilo/archive/ direktorioaren edukiak ezabatzen, .htaccess fitxategia izan ezik."
+msgstr ""
+"Zerbaitengatik, ezin izan da chamilo/var/cache/ direktorioa garbitu. "
+"Mesedez, eskuz garbitu: konektatu zerbitzarira eta ezabatu chamilo/var/cache/"
+" direktorioan dauden fitxategi eta esteka sinboliko guztiak, .htaccess "
+"fitxategia izan ezik. Linuxen: # find var/cache/ \\( -type f -or -type l \\) "
+"-not -name .htaccess -exec echo rm -v \\{} \\;"
 
 msgid "Enable start time"
 msgstr "Aktibatu hasiera data"
